--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,61 @@
-name: Pipeline
+name: Pipeline CI 
 
-# Conditional that indentifies the origin of the commit and triggers the job according to the branch
+# Conditional that identifies the origin of the commit and triggers the job according to the branch
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [main]
 
-name: AWS ECR push
+# Global Environments
+env:
+  ECR_REGISTRY: (ID-DA-SUA-CONTA).dkr.ecr.us-east-1.amazonaws.com
+  ECR_REPOSITORY: metabase
+  IMAGE_TAG: build${GITHUB_RUN_NUMBER}-${GITHUB_SHA::7}
 
 jobs:
-  deploy:
-    name: Deploy
+  build:
     runs-on: ubuntu-latest
 
+    # AWS Authentication
     steps:
-    - name: Install Octopus CLI
-      uses: OctopusDeploy/install-octopus-cli-action@v1.1.1
-      with:
-          version: latest
-    - name: Checkout
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+      # Login on Registry
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build, tag, and push the image to Amazon ECR
-      id: build-image
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
-        IMAGE_TAG: "latest"
-
-      run: |
-        # Build a docker container and push it to ECR 
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+      # Start the Magik. Image Build
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: AKIARCFAZTL2MEZNIPVX.dkr.ecr.us-east-1.amazonaws.com
+          ECR_REPOSITORY: metabase
+        run: |
+          CI_COMMIT_SHORT_SHA=${GITHUB_SHA}
+          IMAGE_TAG=build${GITHUB_RUN_NUMBER}-${GITHUB_SHA::7}
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "Update Image version to ArgoCD"
+          git clone https://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@github.com/IronTrainers/k8s.git
+          cd k8s/argocd/app/cronjobs/
+          git checkout main
+          USER=$(git log -1 --format="%an")
+          MAIL=$(git log -1 --format="%ae")
+          git config user.name --global "$USER"
+          git config user.email --global "$MAIL"
+          git config pull.rebase false --global
+          git fetch --all
+          git merge -X theirs origin/master
+          grep "image:" ampla-saude/*.yaml | awk '{ print $2 }' | sed -i -e 's/build[0-9]*\-.*/'$IMAGE_TAG'/' ampla-saude/*.yaml    
+          git add .
+          git commit -m "Update image tag. CI JOB ID='$IMAGE_TAG'" 
+          git push --set-upstream origin master
+      # Celera, Celera Jesus, Celera Nossa Sra
+      - name: Log out of Amazon ECR
+        if: always()
+        run: docker logout ${{ steps.login-ecr.outputs.registry }}
