--- a/argocd/app/metabase/deployment.yaml
+++ b/argocd/app/metabase/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: metabase
-        image: metabase/metabase:latest
+        image: metabase/metabase:build1-abc
         envFrom:
         - configMapRef:
             name: metabase-config
