--- a/argocd/app/metabase/deployment.yaml
+++ b/argocd/app/metabase/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: metabase
-        image: metabase/metabase:build1-abc
+        image: 073351666420.dkr.ecr.us-east-1.amazonaws.com/metabase:build1-abc
         envFrom:
         - configMapRef:
             name: metabase-config
@@ -50,15 +50,4 @@ spec:
   - port: 3000
     targetPort: 3000
 
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: metabase-config
-data:
-  MB_DB_TYPE: postgres
-  MB_DB_DBNAME: metabase
-  MB_DB_PORT: "5432"
-  MB_DB_USER: admin
-  MB_DB_PASS: admin
-  MB_DB_HOST: postgres.endereco
+
